# DumpIt

./: .env.example  .gitignore  docker-compose.yml
backend/: Cargo.toml  Dockerfile  README.md
backend/migrations/2026-03-16-022742-0000_initial/: down.sql  up.sql
backend/src/: main.rs  util.rs
backend/src/db/: mod.rs  model.rs  schema.rs
backend/src/routes/: download.rs  meta.rs  mod.rs  upload.rs
frontend/: Dockerfile  README.md  nginx.conf  package.json  pnpm-lock.yaml  svelte.config.js
frontend/src/: app.html
frontend/src/components/: button.svelte  card.svelte  fileselect.svelte  footer.svelte  progressbar.svelte  uploadcard.svelte
frontend/src/lib/: upload.ts
frontend/src/routes/: +layout.svelte  +page.svelte  layout.css
