[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["http2", "multipart"] }
blake3 = "1.8.3"
tokio = { version = "1.50.0", features = ["fs", "macros", "net", "rt-multi-thread"] }
tower-http = { version = "0.6.8", features = ["limit"] }
