[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["http2", "multipart"] }
blake3 = "1.8.3"
chrono = "0.4.44"
diesel = { version = "2.3.7", features = ["chrono", "postgres", "r2d2", "returning_clauses_for_sqlite_3_35", "sqlite", "time"] }
diesel_migrations = "2.3.1"
nanoid = "0.4.0"
tokio = { version = "1.50.0", features = ["fs", "macros", "net", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6.8", features = ["limit"] }
